2009-10-05
	* src/options.c(_pam_krb5_options_init): parse the "chpw_prompt"
	flag
	* src/initopts.c(_pam_krb5_set_init_opts): enable or disable
	change-expired-password behavior based on the chpw_prompt setting
	rather than forcing it off all of the time
	* src/prompter.c(_pam_krb5_generic_prompter): when we're letting the
	library attempt to change expired passwords, set PAM_AUTHTOK to
	what the user typed in

2009-06-26
	* src/options.c(option_b): don't leak the list of values

2009-06-26
	* src/sly.c(_pam_krb5_sly_maybe_refresh): refresh creds in the default
	ccache location when KRB5CCNAME isn't set in the environment (#507984)

2009-06-26
	* src/stash.c: derive the stash name from the user some bits of the
	configuration rather than the principal name which we end up hopefully
	deriving using the user and those bits of the configuration.
	* src/options.c: hang on to a copy of the mappings list, in its
	original form, for use later

2009-06-15
	* src/v5.c(v5_validate): walk the keytab, looking for a host key,
	and fall back to just using the first one (#450776)

2009-06-09
	* src/initopts.c,src/v5.c: compile fixes for krb5 1.7

2009-06-04
	* src/prompter.c(_pam_krb5_generic_prompter): if the prompt looks
	like a password prompt, use "Password: " instead

2009-05-27
	* src/auth.c(pam_sm_authenticate): if we need to be the module that
	asks for a password, do so before sanity checking things like whether
	or not the user name is valid (#502602)
	* src/auth.c(pam_sm_authenticate),
	src/prompter.c(_pam_krb5_generic_prompter): only allow libkrb5 to
	ask for a password if we weren't supplied with one and didn't ask for
	one ourselves

2009-03-04
	* src/initopts.c(_pam_krb5_set_init_opts_for_pwchange): add, for
	setting options which are appropriate for obtaining password-changing
	credentials
	* src/v5.c: use temporary-for-pwchange opts when we try to get
	password-changing creds as a way to check that an expired password
	is correct.